HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodWellFormedness/Expected.uv
//! Expected diagnostic metadata for the RecordMethodWellFormedness rejected-source specimen.

expectedDiagnostic("E-TYP-1912", "rule.15.WF-Record-Method")
